2020-02-22  Antonio Ceballos  <aceballos@gmail.com>

	* misc/svn-ignore/: files ignored by Subversion.
	* 'svn propset svn:ignore' set

2020-02-18  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: initialize frontend only if not UCI mode.

2017-07-26  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.5e.
	* doc/version.texi: version 6.2.5e.
	* TODO: localize "y/n" answer in pgn.cc.
	* src/main.cc: some fixes in localized strings.
	* src/frontend/input.cc: localize some strings.
	* src/frontend/pgn.cc: localize "y/n" answer.
	* src/frontend/cmd.cc: some fixes in localized strings.
	* po/gnuchess.pot: regenerated with new and modified strings.
	* po/POTFILES.in: added input.cc
	* po/POTFILES: added input.cc

2017-07-24  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.5.
	* NEWS: version 6.2.5.
	* TODO: review translatable strings.
	* doc/version.texi: version 6.2.5.
	* po/LINGUAS: added da, sv.
	* po/da.po: added.
	* po/sv.po: added.
	* po/es.po: updated.
	* po/nb.po: updated.
	* po/uk.po: updated.
	* po/vi.po: updated.
	* po/zh_CN.po: updated.

2017-07-24  Mark Hermeling  <mhermeling@grammatech.com>  (tiny change)

	* src/frontend/lexpgn.ll: buffer overrun in return_append_str.
	* src/frontend/lexpgn.cc: buffer overrun in return_append_str.

2017-06-15  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.5-rc3.
	* doc/version.texi: version 6.2.5-rc3.
	* po/POTFILES.in: add pgn.cc.
	* po/gnuchess.pot: regenerated translatable strings.
	* src/frontend/cmd.cc: fix translatable string.

2017-06-12  Antonio Ceballos  <aceballos@gmail.com>

	* AUTHORS: several fixes and small enhancements.
	* TODO: several fixes and small enhancements.
	* NEWS: version 6.2.5-rc2.
	* doc/version.texi: version 6.2.5-rc2.
	* configure.ac: version 6.2.5-rc2.
	* po/eo.po: updated translation.
	* ChangeLog: merge branches/readline.
	* src/main.cc: merge branches/readline.
	* src/components.cc: merge branches/readline.