@@ -1,3 +1,13 @@
+2020-02-23  Antonio Ceballos  <aceballos@gmail.com>
+
+	* src/main.cc: avoid compilation warning by assigning
+	function return value to a variable.
+	* src/frontend/engine.cc: avoid compilation warning by assigning 
+	function return value to a variable.
+	* src/frontend/epd.cc: handle return value of fgets.
+	* src/frontend/input.cc: delete sprintf copy of zero-length format
+	string.
+
 2020-02-22  Antonio Ceballos  <aceballos@gmail.com>
 
 	* misc/svn-ignore/: files ignored by Subversion.
@@ -680,7 +690,7 @@
 	* src/frontend/engine.c: comment out extra output write.
 	* src/adapter/adapter.cpp: remove debug trace.
 
-Copyright (C) 2001-2017 Free Software Foundation, Inc.
+Copyright (C) 2001-2020 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
